<resources>
    <string name="app_name">Aadhi</string>
    <string name="okay">OK</string>
    <string name="common_error">Error occured, Please try again later.</string>
    <string name="invite_god">INVITE GOD</string>
    <string name="at_your_place">AT YOUR PLACE</string>
    <string name="audio_message">AUDIO\nMESSAGES</string>
    <string name="video_message">VIDEO\nMESSAGES</string>
    <string name="sloka_for_day">SLOKA\nFOR\nTHE DAY</string>
    <string name="current_events">CURRENT\nEVENTS\nIN THE\nUNIVERSE</string>
    <string name="online_pocha">ONLINE\nPOOJA</string>
    <string name="notice">E-APP\nNOTICE</string>
    <string name="matrimonial">AADHI\nMATRIMONIAL</string>
    <string name="vastu">VASTU\nCONSULTANCY</string>
    <string name="astrology">ASTROLOGY\nCONSULTANCY</string>
    <string name="family_pooja">POOJAS\nFOR\nFAMILY</string>
    <string name="child_pooja">POOJAS\nFOR\nCHILDREN</string>
    <string name="homam">HOMAM\n(HAVAN)</string>
    <string name="slokas">SLOKAS\n&amp;\nMANTRAS</string>
    <string name="sastram">SASTRAM\n&amp;\PINDA\nPRADHINAM</string>
    <string name="pilgrimege">PILGRIMAGE</string>
    <string name="testimonial">Testimonial</string>
    <string name="write_recomendations">write your recommendations and comments</string>
    <string name="current_events_in_universe">CURRENT EVENTS</string>
    <!--<string name="current_events_in_universe">CURRENT EVENTS IN THE UNIVERSE\nVIDEOS AND PHOTOS</string>-->
    <string name="kumababishekam">KUMBABISHEKAM IN CALIFORNIA</string>
    <string name="navarathiri">NAVARATHIRI EVENTS CHENNAI</string>
    <string name="pongal">PONGAL VIZHA - 2018</string>
    <string name="ayyapa_pooja">AYYAPPA POOJA IN ABUDHABI</string>
    <string name="sri_rama">SRI RAMA NAVAMI IN DUBAI</string>
    <string name="sri_venkat">SRI VENKATESHWARA THIRU KALYANAM-AJMAN</string>
    <string name="you_can_upload"><![CDATA[YOU CAN UPLOAD PHOTOS &amp; VIDEOS ALL RELATED POOJAS FESTIVALS FROM ANY WHERE IN THE WORLD]]></string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="description">DESCRIPTION</string>
    <string name="submit">SUBMIT</string>
    <string name="attach_photo">ATTACH PHOTO</string>
    <string name="attach_link">ATTACH LINK</string>
    <string name="upload">UPLOAD PHOTO</string>
    <string name="advertisement">ADVERTISEMENT</string>
    <string name="flower_shop">PERUMAL FLOWER SHOP</string>
    <string name="dubai">DUBAI\n04-1234567</string>
    <string name="sharjah">SHARJAH\n06-1234567</string>
    <string name="abu_dhabi">ABU DHABI\n02-1234567</string>

    <!--POOJA Menu Strings-->
    <!--TODO : THESE Are Dummy Text Values. Remove them later-->
    <string name="poojadetail_dummytext1">"Lord Ganesha is liked and worshipped by one and all, and this became the cornerstone of modern Ganesh Chaturthi. ... Ganesha was also selected as He was regarded universally by Bramhins and non Bramhins, and various sects of internally divided Hinduism. Hence, for many families, Ganapathy is the family God"</string>
    <string name="name_family">NAME / FAMILY</string>
    <string name="gotharam">GOTHARAM</string>
    <string name="raasi">STAR / RAASI</string>
    <string name="whatsapp_no">WHATSAPP NO.</string>
    <string name="optional">(OPTIONAL)</string>
    <string name="eppapp_title">E - APP NOTICE</string>
    <string name="eappdetail_title">EVENT IN AJNAM</string>
    <string name="eapp_content1">SRI RAMA NAVAM IN ANMAN INDIAN ASSOCIATION, AJMAN</string>
    <string name="eapp_content2"><![CDATA[CELEBRATING SRI RAMA NAVAM AT AJMAN INDIAN ASSOCIATION ON 5, 6 & 7 APRIL 2018]]></string>
    <string name="eapp_content3">PLEASE COME WITH YOUR FAMILY AND FRIEND TO ATTEND THE OCCATION AND GET BLESSINGS FROM THE GOD</string>
    <string name="matrimony_title">AADHI MATRIMONIAL SERVICES \nON YOUR REQUEST</string>
    <string name="matrimony_caption1">Aadhi based on UAE we will get bride and bridegroom all over the world.</string>
    <!--<string name="matrimony_caption1">We are oldest and most successful matching service, has been trusted since 2001 by people all over the world to help them find their soulmates.</string>-->
    <string name="matrimony_donwloadform">Download below PDF form and send to our email.</string>
    <string name="vastu_title">VAASTU CONSULTANCY SERVICES \nON YOUR REQUEST</string>
    <string name="vastu_caption1">The Indian architectural science of Vastu Shasra, has been a basis for identifying and developing the best living spaces. Vastu-compliant plots and homes, help the inhabitants to live their lives with more happiness, wealth, health and prosperity.</string>
    <string name="address">ADDRESS / EMIRATES</string>
    <string name="place">PLACE</string>
    <string name="emi_rates">EMI RATES</string>
    <string name="astrology_title">ASTROLOGY CONSULTANCY \nON YOUR REQUEST</string>
    <string name="star_raasi">STAR / RAASI</string>
    <string name="time_of_birth">TIME OF BIRTH</string>
    <string name="dob_place_of_birth"><![CDATA[D O B & PLACE OF BIRTH]]></string>
    <string name="astrology_description">Find out how the planet\'s positions at your precise birth day, time and place influence your personality and life circumstance.</string>
    <string name="pooja_family_title">ALL KINDS OF POOJA \nFOR FAMILY</string>
    <string name="pooja_children_title">ALL KINDS OF POOJA \nFOR CHILDREN</string>
    <string name="pooja_family_description">We help you perform poojas and Homam at some of the most gracious days, with a click, right from your home</string>
    <string name="date">DATE</string>
    <string name="type_of_pooja">TYPE OF POOJA</string>
    <string name="homam_title">ALL KINDS OF HOMAM (HAVAN) \nON YOUR REQUEST</string>
    <string name="sratham_pinda_title">SRATHAM \nPINDA PRADHANAM</string>
    <string name="sratham_pinda_description">We help you perform SRATHAM and PINDA PRADHANAM Homam at your home.</string>
    <string name="gotharam_thithi">GROTHAM / THITHI</string>
    <string name="information">Information</string>
    <string name="services">Services</string>
    <string name="horoscope_of">Horoscope of</string>
    <string name="sub_sect">Sub sect</string>
    <string name="gotharam_pascal_case">Gothram</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="time_place_of_birth"><![CDATA[Time & Place of birth]]></string>
    <string name="qualification">Qualification</string>
    <string name="profession">Profession</string>
    <string name="address_pascal_case">Address / Emirates</string>
    <string name="whatsapp_contact_no">WhatsApp contact number</string>
    <string name="fathers_name"><![CDATA[Father\'s Name & Age]]></string>
    <string name="mothers_name"><![CDATA[Mother\'s Name & Age]]></string>
    <string name="brothers">Brothers</string>
    <string name="elder_younger">Elders / Younger</string>
    <string name="sisters">Sisters</string>
    <string name="requirement">Requirement</string>
    <string name="age_upto">Age upto</string>
    <string name="education">Education</string>
    <string name="nativity">Nativity</string>
    <string name="preference">Preference</string>
    <string name="working">Working</string>
    <string name="non_working">Non-Working</string>
    <string name="india_overseas">India / Overseas</string>
    <string name="pilgrimege_tours_title"><![CDATA[ALL KINDS OF RELIGIOUS \nPILGRIMAGE TOURS & PLACES]]></string>
    <string name="kashi_temple">KASHI TEMPLE, INDIA</string>
    <string name="tour_form_title">THOSE WHO ARE INTERESTED FOR THE TOUR PLEASE FILL BELOW FORM AND SEND TO US, WE WILL GUIDE YOU.</string>
    <string name="dummy_tour_title">KASHI VISHWANATH TEMPLE IN VARANASI</string>
    <string name="audio_msg_title">AUDIO MESSAGES</string>
    <string name="video_msg_title">VIDEO MESSAGES</string>
    <string name="slokas_mantras_subtitle">CLICK &amp; HEAR ANY SLOKA OR MANTRA. IT WILL PLAY FOR 108 TIMES.</string>
    <!--<string name="slokas_mantras_subtitle">CLICK ANY OF THE SLOKAS / MANTRAS IT WILL PLAY FOR 108 TIMES.</string>-->

    <string name="tab_slokas">SLOKAS</string>
    <string name="tab_mantras">MANTRAS</string>
    <string name="slokas_title"><![CDATA[ALL KINDS OF RELIGIOUS \n SLOKAS & MANTRAS]]></string>
    <string name="title_activity_testimonial">Testimonial</string>
    <string name="content">CONTENT</string>
    <string name="post_testimonial_title">Post your testimonial</string>
    <string name="video_component_tag">video_container</string>
</resources>
