<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/content_root_view"
    android:background="@drawable/common_layout_bg"
    tools:context="com.app.aadhi.dashboard.testimonial.PostTestimonialActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="16dp"
        android:orientation="vertical">


        <com.app.aadhi.common.customtextview.LatoBoldTextview
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            style="@style/App_Common_Menus_Title"
            android:text="@string/post_testimonial_title" />



        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TableRow android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/row1_title"
                    style="@style/App_PoojaDetails_Cell"
                    android:layout_marginRight="6dp"
                    android:text="@string/name" />

                <com.app.aadhi.common.customtextview.LatoRegularEditText
                    android:id="@+id/row1_name"
                    style="@style/App_PoojaDetails_Cell"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="" />
            </TableRow>

            <TableRow android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/row2_title"
                    style="@style/App_PoojaDetails_Cell"
                    android:layout_marginRight="6dp"
                    android:text="@string/email" />

                <com.app.aadhi.common.customtextview.LatoRegularEditText
                    android:id="@+id/row2_email"
                    style="@style/App_PoojaDetails_Cell"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/white" />
            </TableRow>


            <TableRow android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/row4_title"
                    style="@style/App_PoojaDetails_Cell.Description"
                    android:layout_height="match_parent"
                    android:layout_marginRight="6dp"
                    android:text="@string/content" />

                <com.app.aadhi.common.customtextview.LatoRegularEditText
                    android:id="@+id/row3_content"
                    style="@style/App_PoojaDetails_Cell.Description"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/submit"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/navigation_drawer_item_default"
            android:text="@string/submit"
            android:textColor="@color/white" />


    </LinearLayout>


</ScrollView>
